Changelog
=========

0.3
-----------------
- List view table now uses field's titles as columns headers

0.2
------------------

- Fixed templates for layout pages (aspage=True)
- Fixed minor bugs

0.1
-------------------

- Initial release