@@ -1,17 +1,23 @@
 import os.path
 
 import transaction
-from zope.interface import implementedBy, implements
+from zope.interface import implements
 import zope.event
-from zope.lifecycleevent import ObjectCreatedEvent, ObjectModifiedEvent
+from zope.lifecycleevent import ObjectCreatedEvent
 
 from grokcore.component import baseclass
 from grokcore import formlib
-import grokcore.view as view
 from grokcore.view import PageTemplateFile
 
 from z3c.table import table
-from megrok import layout
+try:
+    from megrok import layout
+    layout_Form = layout.Form
+    layout_AddForm = layout.AddForm
+except ImportError:
+    from grokcore import layout
+    layout_Form = layout.FormPage
+    layout_AddForm = layout.AddFormPage
 
 from megrok.scaffold import interfaces
 from megrok.scaffold.i18n import ScaffoldMessageFactory as _
@@ -29,62 +35,68 @@ default_list_template.__grok_name__ = 'default_list_form'
 
 
 class BaseForm(object):
-    
-    __form_type__ = '' 
+
+    __form_type__ = ''
     __iface__ = None
-    
+
     implements(interfaces.IControlledView)
-    
+
     def __init__(self, context, request):
         self.context, self.request = context, request
-        self.controller = self.__controller__(context, self)
-    
+        self.controller = self.__controller__(self)
+
     @property
     def actions(self):
         actions = self.default_actions
         ctrl_actions = getattr(self.controller, 'actions', [])
-        ctrl_type_actions = getattr(self.controller, '%s_actions' % self.__form_type__, [])
-        return list(actions)+list(ctrl_actions)+list(ctrl_type_actions)
-    
+        ctrl_type_actions = getattr(self.controller,
+                                    '%s_actions' % self.__form_type__, [])
+        return list(actions) + list(ctrl_actions) + list(ctrl_type_actions)
+
     @property
     def form_fields(self):
-        ff = getattr(self.controller, '%s_form_fields' % self.__form_type__, None)
+        ff = getattr(self.controller,
+                     '%s_form_fields' % self.__form_type__, None)
         if not ff:
             ff = getattr(self.controller, 'form_fields', None)
         if not ff:
             ff = formlib.AutoFields(self.__iface__)
         return ff
-    
+
     @property
     def label(self):
         label = getattr(self.controller, '%s_label' % self.__form_type__, None)
         if label is None:
             label = getattr(self.controller, 'label', None)
         return label or u''
-    
+
     @property
     def prefix(self):
         prefix = getattr(self.controller, '%s_prefix' % self.__form_type__, None)
         if prefix is None:
             prefix = getattr(self.controller, 'prefix', None)
         return prefix or ''
-    
+
     def update(self):
         super(BaseForm, self).update()
         update = getattr(self.controller, 'update', None)
-        if update: update()
-    
+        if update:
+            update()
+
     def __repr__(self):
         return "<%s '%s'>" % (self.__class__.__name__, self.__view_name__)
-        
+
 
 class BaseAddForm(BaseForm):
-    """Our addforms delegate create, add and nextURL methods to the controller"""
-    
+    """Our addforms delegate create, add and nextURL methods
+    to the controller
+
+    """
+
     __form_type__ = 'add'
-    
+
     template = default_form_template
-    
+
     @formlib.action(_("Add"))
     def handle_add(self, **data):
         self.createAndAdd(data)
@@ -93,7 +105,7 @@ class BaseAddForm(BaseForm):
         ob = self.create(data)
         zope.event.notify(ObjectCreatedEvent(ob))
         return self.add(ob)
-    
+
     def create(self, data):
         return self.controller.create(data)
 
@@ -101,104 +113,136 @@ class BaseAddForm(BaseForm):
         ob = self.controller.add(object)
         self._finished_add = True
         return ob
-      
+
     def nextURL(self):
         nextURL = getattr(self.controller, 'nextURL')
         if nextURL:
             return nextURL()
         #same as formlib's
         return self.context.nextURL()
-    
+
     _finished_add = False
-    
+
     def render(self):
         if self._finished_add:
             self.request.response.redirect(self.nextURL())
             return ""
         return formlib.AddForm.render(self)
 
+
 class AddForm(BaseAddForm, formlib.AddForm):
-    
+
     def __init__(self, context, request):
         formlib.AddForm.__init__(self, context, request)
         BaseAddForm.__init__(self, context, request)
-        
 
-class PageAddForm(BaseAddForm, layout.AddForm):
+
+class PageAddForm(BaseAddForm, layout_AddForm):
     def __init__(self, context, request):
         layout.AddForm.__init__(self, context, request)
         BaseAddForm.__init__(self, context, request)
-    
+
     def update_form(self):
         super(PageAddForm, self).update_form()
         if self._finished_add:
             self.request.response.redirect(self.nextURL())
 
+
 class EditForm(BaseForm, formlib.EditForm):
-    
+
     __form_type__ = 'edit'
-    
+
     template = default_form_template
-    
+
     deleteSuccessMessage = _('Data successfully deleted')
-    
+
     def __init__(self, context, request):
         formlib.EditForm.__init__(self, context, request)
         BaseForm.__init__(self, context, request)
-    
+
+    @property
+    def __referer__(self):
+        # TODO: replace with the url of the previous page
+        return self.url(self.controller.context,
+                        self.controller.getView('list') or '')
+
     default_actions = formlib.EditForm.actions.copy()
-    
-    @formlib.action(_(u'Delete'), default_actions, condition=lambda form, self:form.controller.allow_delete)
+
+    @formlib.action(_(u'Delete'), default_actions,
+                    condition=lambda form, self: form.controller.allow_delete)
     def delete(self, **data):
         listview = self.controller.getView('list') or 'index'
         nextURL = self.url(self.context.__parent__, listview)
         self.controller.delete(self.context)
         if not self.status:
-            self.status = self.deleteSuccessMessage #FIXME? this won't appear since we redirect
+            self.status = self.deleteSuccessMessage  # FIXME? this won't appear
+                                                     # since we redirect
         self.redirect(nextURL)
 
-class PageEditForm(EditForm, layout.Form):
+    @formlib.action(_(u'Cancel'), default_actions,
+                    condition=lambda form, self: form.controller.allow_cancel)
+    def cancel(self, **data):
+        url = self.url(self.controller.context, self.controller.getView('list'))
+        if self.__referer__ != url:
+            url = self.url(self.context, self.controller.getView('display'))
+        self.redirect(url)
+
+
+class PageEditForm(EditForm, layout_Form):
     aspage = True
-    
+
+
 class DisplayForm(BaseForm, formlib.DisplayForm):
-        
+
     __form_type__ = 'display'
-    
+
     template = default_display_template
-    
+
     def __init__(self, context, request):
         formlib.DisplayForm.__init__(self, context, request)
         BaseForm.__init__(self, context, request)
-    
-    @formlib.action(_(u'Edit'), condition=lambda form, self:form.controller.allow_edit)
+
+    default_actions = formlib.DisplayForm.actions.copy()
+
+    @formlib.action(_(u'Edit'), default_actions,
+                    condition=lambda form, self: form.controller.allow_edit)
     def edit(self, **data):
         self.redirect(self.url(self.context, self.controller.getView('edit')))
-    
-    @formlib.action(_(u'Delete'), condition=lambda form, self:form.controller.allow_delete)
+
+    @formlib.action(_(u'Delete'), default_actions,
+                    condition=lambda form, self: form.controller.allow_delete)
     def delete(self, **data):
         listview = self.controller.getView('list') or 'index'
-        nextURL = self.url(self.context.__parent__, listview)
+        nextURL = self.url(self.controller.context, listview)
         self.controller.delete(self.context)
-        self.redirect(nextURL)    
+        self.redirect(nextURL)
 
-class PageDisplayForm(DisplayForm, layout.Form):
+    @formlib.action(_(u'Go back'), default_actions,
+                    condition=lambda form, self: form.controller.allow_cancel)
+    def cancel(self, **data):
+        self.redirect(self.url(self.controller.context,
+                                self.controller.getView('list')))
+
+
+class PageDisplayForm(DisplayForm, layout_Form):
     aspage = True
 
+
 class FormTable(table.Table, formlib.Form):
-    
+
     baseclass()
-    
+
     implements(interfaces.IFormTable)
     template = default_list_template
-    
+
     # table defaults
     cssClasses = {'table': 'contents'}
     cssClassEven = u'even'
     cssClassOdd = u'odd'
     cssClassSelected = u'selected'
-    
-    status = None # The Tabular stuff checks if the status is None
-    
+
+    status = None  # The Tabular stuff checks if the status is None
+
     # internal defaults
     supportsDelete = False
     supportsEdit = False
@@ -206,36 +250,37 @@ class FormTable(table.Table, formlib.Form):
     deleteErrorMessage = _('Could not delete the selected items')
     deleteNoItemsMessage = _('No items selected for delete')
     deleteSuccessMessage = _('Data successfully deleted')
-    
-    editTooManyItemsMessage = _("Select only one item for edit") 
+
+    editTooManyItemsMessage = _("Select only one item for edit")
     editNoItemsMessage = _("No item selected for edit")
 
     allowDelete = True
     allowEdit = True
-    
+
     def __init__(self, context, request):
         formlib.Form.__init__(self, context, request)
         table.Table.__init__(self, context, request)
-    
+
     def update(self):
         self.setupConditions()
         super(FormTable, self).update()
-    
+
     def updateAfterActionExecution(self):
         self.setupConditions()
         table.Table.update(self)
-    
+
     def render(self):
         return self._render_template()
 
     render.base_method = True
     renderFormTable = render
-    
+
     def executeDelete(self, item):
         raise NotImplementedError('Subclass must implement executeDelete')
 
     def setupConditions(self):
-        self.hasContent = bool(self.values) #instead of rows so we can call this before setupRows
+        # values instead of rows so we can call this before setupRows
+        self.hasContent = bool(self.values)
         if self.allowDelete:
             self.supportsDelete = self.hasContent
         if self.allowEdit:
@@ -253,11 +298,11 @@ class FormTable(table.Table, formlib.Form):
         except KeyError:
             self.status = self.deleteErrorMessage
             transaction.doom()
-    
+
     def getEditURL(self, item):
         return self.url(item, self.controller.getView('edit'))
-    
-    @formlib.action(_('Edit'), condition=lambda form, self:form.supportsEdit)
+
+    @formlib.action(_('Edit'), condition=lambda form, self: form.supportsEdit)
     def edit(self, **data):
         if not len(self.selectedItems):
             self.status = self.editNoItemsMessage
@@ -266,88 +311,95 @@ class FormTable(table.Table, formlib.Form):
             self.status = self.editTooManyItemsMessage
             return
         self.redirect(self.getEditURL(self.selectedItems[0]))
-    
+
     @formlib.action(_('Delete'), name='delete',
-                             condition=lambda form, self:form.supportsDelete)
+                             condition=lambda form, self: form.supportsDelete)
     def handleDelete(self, **data):
         self.doDelete(**data)
 
+
 class CheckBoxColumn(table.column.CheckBoxColumn):
     cssClasses = {'th': 'xcol'}
-    
+
     def renderCell(self, item):
         selected = u''
         if item in self.selectedItems:
-            selected='checked="checked"'
-        return u'<input type="checkbox" class="%s" name="%s" value="%s" %s />' \
-            %('checkbox-widget xcol', self.getItemKey(item), self.getItemValue(item),
-            selected)
+            selected = 'checked="checked"'
+        return u'<input type="checkbox" class="%s" name="%s"' \
+            u'value="%s" %s />' % ('checkbox-widget xcol',
+               self.getItemKey(item), self.getItemValue(item), selected)
+
 
 class GetAttrLinkColumn(table.column.LinkColumn, table.column.GetAttrColumn):
-    
+
     def updateLinks(self, item):
         self.linkContent = self.getValue(item)
-        self.linkName = self.table.controller.getView('display') 
-    
+        self.linkName = self.table.controller.getView('display')
+
     def renderCell(self, item):
         self.updateLinks(item)
         return table.column.LinkColumn.renderCell(self, item)
 
+
 class ListForm(BaseForm, FormTable):
-    
+
     baseclass()
-    
+
     __form_type__ = 'list'
-    
+
     default_actions = FormTable.actions.copy()
-    
+
     def __init__(self, context, request):
         FormTable.__init__(self, context, request)
         BaseForm.__init__(self, context, request)
-        
+
         self.batchSize = self.controller.batch_size
         self.startBatchingAt = self.controller.start_batching_at
-    
+
     @property
     def values(self):
         return self.controller.list()
-        
+
     def render(self):
         return self.renderFormTable()
-    
+
     @property
     def link_columns(self):
         return self.controller.link_columns
-    
+
     def setUpColumns(self):
         cols = []
         if self.availableActions():
-            cols.append(table.column.addColumn(self, CheckBoxColumn, u'item', weight=-1))
+            cols.append(table.column.addColumn(self, CheckBoxColumn,
+                                                u'item', weight=-1))
         for field in self.form_fields:
             field_name = field.__name__
             if field_name in self.link_columns:
                 BaseColumn = GetAttrLinkColumn
             else:
                 BaseColumn = table.column.GetAttrColumn
+
             class GetFieldColumn(BaseColumn):
                 attrName = field_name
-            cols.append(table.column.addColumn(self, GetFieldColumn, field_name, header=field.field.title))
+
+            cols.append(table.column.addColumn(self, GetFieldColumn,
+                                        field_name, header=field.field.title))
         return cols
-    
+
     @property
     def allowDelete(self):
         return self.controller.allow_delete
-    
+
     @property
     def allowEdit(self):
         return self.controller.allow_edit
-    
+
     def executeDelete(self, item):
         self.controller.delete(item)
-    
+
     def getEditURL(self, item):
         return self.url(item, self.controller.getView('edit'))
 
-class PageListForm(ListForm, layout.Form):
+
+class PageListForm(ListForm, layout_Form):
     aspage = True
-    
