@@ -3,7 +3,14 @@ Changelog
 
 0.3
 -----------------
+
 - List view table now uses field's titles as columns headers
+- Fixed bug (indentation error) on Controller default add method
+- Changed Controller __init__'s signature
+- Dropped megrok.layout dependency. Now either megrok.layout or
+grokcore.layout must be included.
+- Controllers are now registered as utilities
+
 
 0.2
 ------------------
